--- a/app/bookConference.html
+++ b/app/bookConference.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/book.css">
     <link rel="stylesheet" href="css/mobile.css">
     <script src="./js/script.js" defer></script>
-    <script src="js/book.js" defer></script>
+    <script src="js/bookConference.js" defer></script>
     <title>Reservation</title>
 </head>
 <body class="book">
@@ -60,7 +60,7 @@
     <main>
         <section class="calendar-section" aria-labelledby="calendar-heading">
             <header class="calendar-header">
-                <button id="prevMonth" class="calendar-nav" aria-label="Previous month"><</button>
+                <button id="prevMonth" class="calendar-nav" aria-label="Previous month"></button>
                 <h2 id="currentMonth" aria-live="polite">May 2025</h2>
                 <button id="nextMonth" class="calendar-nav" aria-label="Next month">></button>
             </header>
