--- a/app/services.html
+++ b/app/services.html
@@ -169,7 +169,7 @@
             </article>
 
             <div class="button">
-                <a href="book.html" class="home-link">MAKE A RESERVATION</a>
+                <a href="book.html" class="home-link">CHECH THE AVAILABILITY</a>
             </div>
 
             <div class="button">
