--- a/app/contact.html
+++ b/app/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./Terrabella/css/reset.css">
     <link rel="stylesheet" href="css/mobile.css">
+    <script src="script.js" defer></script>
 
     <title>Document</title>
 </head>
@@ -108,16 +109,6 @@
             Bishkek</p>
     </footer>
     <!--find the element with block and verify-->
-    <script>
-        function myFunction() {
-            const element = document.getElementById("menu");
-            if (element.classList.contains('visible')) {
-                element.classList.remove("visible")
-            } else {
-                element.classList.add("visible");
-            }
-        }
-    </script>
 </body>
 
 </html>
