--- a/app/about.html
+++ b/app/about.html
@@ -54,7 +54,7 @@
             </div>
         </nav>
         <article class="hero">
-            <img class="image" src="./img/loop Kyrgyzstan2_converted.jpg" alt="Scenic view of Kyrgyzstan mountains">
+            <img class="image" src="img/helmets2_converted.jpg" alt="Scenic view of Kyrgyzstan mountains">
         </article>
     </header>
     <main>
