--- a/app/bookConference.html
+++ b/app/bookConference.html
@@ -14,9 +14,8 @@
 <body class="book">
     <!-- header -->
     <header class="header">
-        <h2>Guesthouse</h2>
+        <h2>Meeting room</h2>
         <h1>Terrabella</h1>
-        <h2>Welcome to Kyrgyzstan</h2>
         <button class="burger" onclick="myFunction()" aria-label="Toggle menu" aria-expanded="false">
             <span></span>
             <span></span>
