--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="createAcc.html">Create account</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="contact-form.php">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="panier.html">Cart</a></li>
             </ul>
             <!-- Button burger -->
