--- a/app/payment.html
+++ b/app/payment.html
@@ -83,6 +83,12 @@
                 <button type="submit" id="payButton" class="book-button" disabled>Pay</button>
             </form>
         </section>
+        <section class="success-message" id="success-message" style="display: none;" aria-live="polite">
+            <div class="success-content">
+                <span class="checkmark">✔</span>
+                <p>Your payment was processed successfully. Confirmation of your reservation will be sent by email.</p>
+            </div>
+        </section>
     </main>
 
     <dialog id="confirmation" aria-labelledby="confirmation-heading">
@@ -102,15 +108,5 @@
         <p>📱 <span class="span">WhatsApp:</span> <a class="phone-link" href="https://wa.me/+996774060992">+996 774 06 09 92</a></p>
         <p>🌍 <span class="span">Address:</span> 15 minutes from Bishkek, Kyrgyzstan <span class="span">street:</span> Baichechkei 103, Arashan, <span class="span">district:</span> Alamedine, <span class="span">city:</span> Bishkek</p>
     </footer>
-    <script>
-        function myFunction() {
-            const element = document.getElementById("menu");
-            if (element.classList.contains('visible')) {
-                element.classList.remove("visible")
-            } else {
-                element.classList.add("visible");
-            }
-        }
-    </script>
 </body>
 </html>
